Bug 423436. Elements embedding SVG by reference don't resize if they depend on intrinsic percentage width/height. r+sr=dbaron@mozilla.com, blocking1.9=me